--- a/cosas.html
+++ b/cosas.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Enlaces/Hiperenlaces</h1>
-    <a href="pagina1.html" target="_self">click aquí bro</a>
-    <a href="Subcarpeta/cositasricas.html">Click aquí para ver Torrente 6</a>
+    <a href="http://iesjuanbosco.es" target="_self">I.E.S.Juan Bosco</a>
+    <a href="pagina1.html" target="_self">Enlace a una página del sitio</a>
+    <a href="Subcarpeta/cositasricas.html">Enlace a página en una subcarpeta</a>
     <a href="Subcarpeta/cositasricas.html"><img src="Sin título.jpeg"></a>
 </body>
 </html>
