--- a/cosas.html
+++ b/cosas.html
@@ -10,6 +10,10 @@
     <a href="http://iesjuanbosco.es" target="_self">I.E.S.Juan Bosco</a>
     <a href="pagina1.html" target="_self">Enlace a una página del sitio</a>
     <a href="Subcarpeta/cositasricas.html">Enlace a página en una subcarpeta</a>
+    <p>
     <a href="Subcarpeta/cositasricas.html"><img src="Sin título.jpeg"></a>
+    </p>
+    <h1>Ejemplo de enlace a un archivo</h1>
+    <a href="Sin título.jpeg">Descargate el currículum de DAW</a>
 </body>
 </html>
